--- a/Lab1/NN_Lab1.ipynb
+++ b/Lab1/NN_Lab1.ipynb
@@ -3,8 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "NN_Lab1.ipynb",
-      "provenance": []
+      "name": "Copy of NN_Lab1.ipynb",
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,9 +14,23 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/DimitriosGkegkas/Neural-Networks/blob/main/Lab1/NN_Lab1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "VhreihXLC6ZC"
+        "id": "VhreihXLC6ZC",
+        "outputId": "22548ab9-cdeb-40f9-ca0c-170d1dedf788",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "try:\n",
@@ -24,7 +39,31 @@
         "except:\n",
         "  f=open(data/semeion.data)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'Neural-Networks'...\n",
+            "remote: Enumerating objects: 11, done.\u001b[K\n",
+            "remote: Counting objects: 100% (11/11), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (8/8), done.\u001b[K\n",
+            "remote: Total 11 (delta 1), reused 11 (delta 1), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (11/11), done.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kFbazQUTFNgw"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
